--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css"> <!-- External Stylesheet -->
+  <title>My Website</title> <!-- Title Tag -->
+</head>
+<body>
+  <!-- Body Content Goes Here -->
+</body>
+</html>
